infrastructure/networking/traefik-internal/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-internal-route
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.relyq.dev
    external-dns.alpha.kubernetes.io/dns: pihole
spec:
  hostnames:
    - traefik.relyq.dev
  parentRefs:
    - name: gateway-internal
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: api@internal
          kind: TraefikService
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc
--- # traefik-oidc-auth
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.relyq.dev
    external-dns.alpha.kubernetes.io/dns: pihole
spec:
  hostnames:
    - auth.relyq.dev
  parentRefs:
    - name: gateway-internal
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: noop@internal
          kind: TraefikService
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc
  namespace: traefik
spec:
  plugin:
    traefik-oidc-auth:
      Secret: urn:k8s:secret:oidc:secret
      Provider:
        Url: https://keycloak.relyq.dev/realms/claire
        ClientId: urn:k8s:secret:oidc:keycloak-client-id
        ClientSecret: urn:k8s:secret:oidc:keycloak-client-secret
        UsePkce: false
        ValidAudience: account
      SessionCookie:
        Domain: relyq.dev
      Authorization:
        AssertClaims:
          - Name: resource_access.traefik.roles
            AllOf:
              - admin
